# bsky-saves-install

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  wheel.sha256
.github/workflows/: ci.yml  coordination-pr.yml  release.yml  wheel-version-bump.yml
coordination/_smoke/: manifest.json  smoke.md
coordination/installer-status-panel/: installer-status-panel-resolved.md  installer-status-panel.md  manifest.json
docs/: bootstrap-from-core.md  bootstrap-from-gui.md  lessons.md  release-checklist.md  v0.1-lessons.md
docs/superpowers/plans/: 2026-05-16-bsky-saves-install-v0.1.md  2026-05-18-v0.2.0-icons-and-token.md  2026-05-18-v0.3.0-popover.md  2026-05-21-v0.4.0-status-panel.md  2026-05-22-r12-error-surface.md
docs/superpowers/specs/: 2026-05-16-bsky-saves-install-v0.1-design.md  2026-05-17-status-window-contents.md  2026-05-18-launcher-ux.md  2026-05-21-installer-status-panel.md  2026-05-22-r12-error-surface-design.md
scripts/: build_icns.py  build_iconset.py  build_menubar_icon.py  fetch_wheel.py  probe_bookmark.py
src/bsky_saves_launcher/: __init__.py  __main__.py  activation.py  app.py  clipboard.py  health.py  launchagent.py  popover.py  preferences.py  status.py  status_window.py  supervisor.py  token.py  tray.py
src/bsky_saves_launcher/resources/: README.md  icon.icns
tests/: test_clipboard.py  test_fetch_wheel.py  test_health.py  test_launchagent.py  test_preferences.py  test_status.py  test_supervisor.py  test_token.py
