[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bsky-saves-launcher"
version = "0.1.0"
description = "Menu-bar launcher that supervises bsky-saves serve for the bsky-saves-install macOS app."
requires-python = ">=3.11"
authors = [{ name = "tenorune" }]
license = { text = "MIT" }
dependencies = [
    "pystray>=0.19",
    "Pillow>=10",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "briefcase>=0.3.20",
]

[project.scripts]
bsky-saves-launcher = "bsky_saves_launcher.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bsky_saves_launcher"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.briefcase]
project_name = "Bsky Saves"
bundle = "net.lightseed"
version = "0.1.0"
url = "https://github.com/tenorune/bsky-saves-install"
license = "MIT"
author = "tenorune"
author_email = "noreply@lightseed.net"

[tool.briefcase.app.bsky-saves-launcher]
formal_name = "Bsky Saves"
description = "Local helper for bsky-saves bookmarks."
long_description = "Menu-bar launcher that supervises bsky-saves serve and exposes a local helper at http://127.0.0.1:47826/."
sources = ["src/bsky_saves_launcher"]
test_sources = ["tests"]

# Runtime dependencies bundled into the .app. The bsky-saves wheel is resolved
# via a local-file URL pointing at the wheelhouse populated by scripts/fetch_wheel.py.
requires = [
    "pystray>=0.19",
    "Pillow>=10",
    "httpx>=0.27",
    "bsky-saves @ file://./wheelhouse/bsky_saves-0.6.4-py3-none-any.whl",
]

[tool.briefcase.app.bsky-saves-launcher.macOS]
universal_build = true
requires = []
