[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bsky-saves-launcher"
version = "0.3.0"
description = "Menu-bar launcher that supervises bsky-saves serve for the bsky-saves-install macOS app."
requires-python = ">=3.11"
authors = [{ name = "tenorune" }]
license = { text = "MIT" }
dependencies = [
    "pystray>=0.19",
    "Pillow>=10",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "briefcase>=0.3.20",
    "cairosvg>=2.7",
    "icnsutil>=1.1",
]

[project.scripts]
bsky-saves-launcher = "bsky_saves_launcher.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bsky_saves_launcher"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.briefcase]
project_name = "BSky Saves"
bundle = "net.lightseed"
version = "0.3.0"
url = "https://github.com/tenorune/bsky-saves-install"
license = "MIT"
author = "tenorune"
author_email = "noreply@lightseed.net"

[tool.briefcase.app.bsky-saves-launcher]
formal_name = "BSky Saves"
description = "Local helper for bsky-saves bookmarks."
long_description = "Menu-bar launcher that supervises bsky-saves serve and exposes a local helper at http://127.0.0.1:47826/."
sources = ["src/bsky_saves_launcher"]
test_sources = ["tests"]
icon = "src/bsky_saves_launcher/resources/icon"

# Runtime dependencies bundled into the .app. The bsky-saves wheel is pulled
# from PyPI by version pin; for reproducible/offline builds, run
# `python scripts/fetch_wheel.py` first to populate ./wheelhouse/ and set
# `PIP_FIND_LINKS=./wheelhouse` before `briefcase create`. The fetch script
# enforces the SHA-256 gate from wheel.sha256.
requires = [
    "pystray>=0.19",
    "Pillow>=10",
    "httpx>=0.27",
    "bsky-saves==0.6.8rc1",
]

[tool.briefcase.app.bsky-saves-launcher.macOS]
universal_build = true
# std-nslog routes Python stdout/stderr to macOS unified logging so they're
# visible via `log show --predicate 'process == "BSky Saves"'` — without it,
# Briefcase warns at every launch and helper-side prints are lost. Required
# for diagnosing helper-side issues (e.g. the 403-body output in fetch.py).
requires = [
    "std-nslog~=1.0",
]

[tool.briefcase.app.bsky-saves-launcher.macOS.info]
# Mark the app as a UI-element-only background app at the OS level. This
# is the primary signal to macOS that we're a menu-bar daemon launcher,
# not a foreground app — no Dock icon, no Cmd-Tab entry, no app menu.
# Together with the runtime NSApp.setActivationPolicy_(Accessory) call in
# app.py, this keeps the launcher out of the Dock and app switcher even
# across cold start, app-bundle re-launches from Dock recents, etc.
LSUIElement = true
